--- a/src/app/theme/layouts/header-nav/header-nav.component.html
+++ b/src/app/theme/layouts/header-nav/header-nav.component.html
@@ -97,7 +97,7 @@
                             </a>
                         </li>
                         <li class="m-menu__item" routerLinkActive="m-menu__item--active">
-                            <a routerLink="/contacto" class="m-menu__link" routerLinkActive="m-menu__item--active">
+                            <a target="_blanck" href="https://api.whatsapp.com/send?phone=+17862004382&text=&source=&data=" class="m-menu__link" routerLinkActive="m-menu__item--active">
                                 <i class="m-menu__link-icon fa fa-pencil"></i>
                                 <span class="m-menu__link-title">
                                     <span class="m-menu__link-wrap">
