--- a/src/app/theme/pages/default/extras/crear-extra/crear-extra.component.html
+++ b/src/app/theme/pages/default/extras/crear-extra/crear-extra.component.html
@@ -1,1 +1,1 @@
-<app-extra-formulario (cancel)="cancel()" (submitForm)="crearExtra($event)"></app-extra-formulario>
+<app-extra-formulario  (submitForm)="crearExtra($event)"></app-extra-formulario>
